--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "spotify-clone",
+  "name": "vigorous-velocity",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.0.3",
-    "@astrojs/svelte": "^4.0.3",
-    "@astrojs/tailwind": "^5.0.1",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
-    "astro": "^3.2.3",
-    "clsx": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "svelte": "^4.2.1",
-    "tailwindcss": "^3.3.3"
+    "@astrojs/react": "^4.2.1",
+    "@astrojs/svelte": "^7.0.6",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@tailwindcss/vite": "^4.0.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "astro": "^5.5.3",
+    "clsx": "^2.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "svelte": "^5.23.2",
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.2"
   }
 }
