--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.3",
     "@astrojs/react": "^4.2.1",
     "@astrojs/svelte": "^7.0.6",
     "@radix-ui/react-slider": "^1.2.3",
